# ProjektAnlagenring

./: .gitignore  .gitmodules  durchgangigkeit.md  gihub-overleaf-instricutions.md  index.html  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.tex  main.toc  pyproject.toml  references.bib  report.aux  report.run.xml  report.tex  report.toc
ABsurveys/: .gitignore  README.md  config.json  generate_web_mockup.py  index.html  map.html  old_map.html  pyproject.toml  scenarios.csv  web.html
ABsurveys/backend/: db.py  server.py  trueskill_utils.py  utils.py
ABsurveys/backend_local/: pairing.py  server.py  trueskill_utils.py  utils.py
ABsurveys/evaluation/: merge_surveys.py
ABsurveys/evaluation/maps/: README.md  main.py  map.css  map.js  map.py  utils.py
ABsurveys/evaluation/streetscore/: README.md  dataset.py  inference.py  losses.py  main.py  model.py  train.py  uncertainty.py
ABsurveys/frontend/: index.html  package-lock.json  package.json
ABsurveys/frontend/src/: App.css  App.jsx  index.css
ABsurveys/frontend/src/components/: ABGroup.css  ABGroup.jsx  Header.css  Header.jsx  QuestionBlock.css  QuestionBlock.jsx  SimpleQuestions.css  SimpleQuestions.jsx  SurveyCard.css  SurveyCard.jsx
ABsurveys/images/Anlagenring/: bike.csv  database.swm2  images.csv  stay.csv  walk.csv
ABsurveys/images/Anlagenring/FriedbergerTor/: directions.gpkg  positions.gpkg  streetscore_results.gpkg
ABsurveys/images/Anlagenring/GruppeSafety/: Koordinaten.xlsx
ABsurveys/questions/: english.csv  german.csv  languages.csv  questions.csv
ABsurveys/user_data/: Anlagenring_images_local.csv  Anlagenring_user_data_local.csv  Anlagenring_user_data_merged.csv  Anlagenring_user_images_merged.csv  image_state.json  user_answers.csv
front_page/: front_page.tex
maps/: index.html
marp/: README.md  presentation.html  presentation.md  theme.css
report/: main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.run.xml  main.tex  main.toc  references.bib  report.bcf  report.fdb_latexmk  report.fls  report.out
routing/: .gitignore  README.md  main.py  pyproject.toml  (+1 more)
(+41 files in other folders)
