[project]
name = "anlagenring"
version = "0.1.0"
description = "Der Anlagenring als durchgängiger Grünraum"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=2.2",
    "geopandas>=1.1.3",
    "shapely>=2.1.2",
    "matplotlib>=3.10.9",
    "folium>=0.20.0",
    "branca>=0.8",
    "mapclassify>=2.10.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
routing = [
    "fastapi>=0.136.3",
    "geopy>=2.4.1",
    "h3>=4.4.2",
    "igraph>=1.0.0",
    "leafmap>=0.62.0",
    "networkx>=3.6.1",
    "osm2geojson>=0.3.2",
    "osmnx>=2.1.0",
    "polyline>=2.0.4",
    "pycountry>=26.2.16",
    "rapidfuzz>=3.14.5",
    "rasterio>=1.5.0",
    "scikit-image>=0.26.0",
    "uvicorn>=0.48.0",
]

surveys = [
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "motor>=3.3",
    "pillow>=12",
    "requests>=2.31",
    "pyyaml>=6",
    "pyogrio>=0.12",
    "pyproj>=3.7",
]

streetscore = [
    "torch>=2.12",
    "torchvision>=0.27",
    "huggingface-hub>=1.16",
]

visualization = [
    "folium>=0.20.0",
    "branca>=0.8",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.9",
]
